<resources>
    <string name="app_name">Zypher</string>
    <string name="title_activity_text_encryptor">TextEncryptor</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_file_encryptor">fileEncryptor</string>
    <string name="label_id">Username</string>
    <string name="label_pswd">Password</string>
    <string name="label_cpswd">Confirm Password</string>
    <string name="configure">configure</string>
    <string name="create_new_vault">Create New Vault</string>
    <string name="application">Application</string>
    <string name="create_vault">Create Vault</string>
    <string name="generate">Generate Password</string>
    <string name="password">Password</string>
    <string name="vault_is_empty">Vault is empty</string>
    <string name="add_vault">Add Vault</string>
</resources>